# hiring-data-engineer-task

./: .gitignore  Makefile  README.md  cli.py  main.py  pyproject.toml  scripts.py  seed.py  task.md
clickhouse/: stats.sql
clickhouse/results/: campaign_ctr.sql  daily_summary.sql
clickhouse/schemas/: advertisers.sql  campaigns.sql  clicks.sql  impressions.sql
src/compose/: docker-compose.prefect.yml
src/core/: settings.py
src/extract/: advertisers.py  campaigns.py  clicks.py  extract_utils.py  impressions.py  load_data.py  load_utils.py
src/orchestrate/flows/: etl.py
src/serve/: export_results.py
src/tests/: test_clickhouse_tables.py  test_extract_load.py
src/transform/pipeline/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
src/transform/pipeline/macros/: calc_ctr.sql
src/transform/pipeline/models/marts/: fct_campaign_ctr.sql  fct_daily_summary.sql  schema.yml
src/transform/pipeline/models/staging/: sources.yml  stg_advertisers.sql  stg_campaigns.sql  stg_clicks.sql  stg_impressions.sql
src/transform/pipeline/tests/: clicks_gt_impressions.sql  schema.yml
