[project]
name = "data-task"
version = "0.1.0"
description = "RMT Data Engineering Task"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "black>=25.1.0",
  "dbt-clickhouse>=1.9.1",
  "dbt-core>=1.9.4",
  "dbt-postgres>=1.9.0",
  "httpx>=0.28.1",
  "pendulum>=3.1.0",
  "polars>=1.29.0",
  "prefect>=3.0.0,<4.0.0",
  "psycopg[binary]>=3.2.6",
  "pydantic-settings>=2.9.1",
  "python-dotenv>=1.1.0",
  "ruff>=0.11.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pyright]
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
  "black>=25.1.0",
  "coverage>=7.8.0",
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "ruff>=0.11.8",
  "types-psycopg2>=2.9.21.20250318",
]
